--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
  - docker build -t kim2108pw/docker-react-app -f Dockerfile.dev ./
 
 script:
- - docker run -e CI=true kim2108pw/docker-react-app npm run start -- --coverage
+ - docker run -e CI=true kim2108pw/docker-react-app npm run test -- --coverage
 
 after_success:
  - echo "Test Success"
