--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 before_install:
  - echo "start creating an image with dockerfile"
- - docker build -t kim2108pw/docker-react-app -f Dockerfile.dev ./
+ - docker build -t kim2108pw/docker-react-app ./
 
 script:
  - docker run -e CI=true kim2108pw/docker-react-app npm run test -- --coverage
