--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,10 @@ services:
 
 before_install:
  - echo "start creating an image with dockerfile"
- - docker build -t kim2108pw/docker-react-app ./
+ - docker build -t kim2108pw/docker-react-app -f Dockerfile.dev ./
 
 script:
  - docker run -e CI=true kim2108pw/docker-react-app npm run test -- --coverage
-
-#after_success:
-# - echo "Test Success"
 
 deploy:
     provider: elasticbeanstalk
