--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,24 @@ sudo: required
 language: generic
 
 services:
- - docker
+  - docker
 
 before_install:
- - echo "start creating an image with dockerfile"
- - docker build -t kim2108pw/docker-react-app -f Dockerfile.dev ./
+  - echo "start creating an image with dockerfile"
+  - docker build -t kim2108pw/docker-react-app -f Dockerfile.dev .
 
-script:
- - docker run -e CI=true kim2108pw/docker-react-app npm run test -- --coverage
+script: 
+  - docker run -e CI=true kim2108pw/docker-react-app npm run test -- --coverage
 
 deploy:
-    provider: elasticbeanstalk
-    region: "ap-northeast-1"
-    app: "docker-react-app"
-    env: "DockerReactApp-env"
-    bucket_name: "elasticbeanstalk-ap-northeast-1-039642168930"
-    bucket_path: "docker-react-app"
-    on:
-        branch: master
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_ACCESS_KEY    
+  edge: true
+  provider: elasticbeanstalk
+  region: ap-northeast-1
+  app: docker-react-app
+  env: DockerReactApp-env-1
+  bucket_name: elasticbeanstalk-ap-northeast-1-039642168930
+  bucket_path: docker-react-app
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
